--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -136,7 +136,7 @@ h1 {
   position: absolute;
   top: 1.5em;
   right: 1.5em;
-  z-index: 30;
+  z-index: 50;
 }
 
 .reader-text-viewer {
